; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/mshtml/extr_htmldoc.c_init_test.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/mshtml/extr_htmldoc.c_init_test.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@doc_unk = common dso_local global i32* null, align 8
@last_hwnd = common dso_local global i32* null, align 8
@doc_hwnd = common dso_local global i32 0, align 4
@FALSE = common dso_local global i8* null, align 8
@set_clientsite = common dso_local global i8* null, align 8
@load_from_stream = common dso_local global i8* null, align 8
@CallUIActivate_None = common dso_local global i32 0, align 4
@call_UIActivate = common dso_local global i32 0, align 4
@load_state = common dso_local global i32 0, align 4
@editmode = common dso_local global i8* null, align 8
@stream_read = common dso_local global i64 0, align 8
@protocol_read = common dso_local global i64 0, align 8
@nav_url = common dso_local global i32* null, align 8
@ipsex = common dso_local global i8* null, align 8
@inplace_deactivated = common dso_local global i8* null, align 8
@complete = common dso_local global i8* null, align 8
@testing_submit = common dso_local global i8* null, align 8
@DocHostUIHandler = common dso_local global i32 0, align 4
@expect_uihandler_iface = common dso_local global i32* null, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32)* @init_test to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @init_test(i32 %0) #0 {
  %2 = alloca i32, align 4
  store i32 %0, i32* %2, align 4
  store i32* null, i32** @doc_unk, align 8
  store i32* null, i32** @last_hwnd, align 8
  store i32 0, i32* @doc_hwnd, align 4
  %3 = load i8*, i8** @FALSE, align 8
  store i8* %3, i8** @set_clientsite, align 8
  %4 = load i8*, i8** @FALSE, align 8
  store i8* %4, i8** @load_from_stream, align 8
  %5 = load i32, i32* @CallUIActivate_None, align 4
  store i32 %5, i32* @call_UIActivate, align 4
  %6 = load i32, i32* %2, align 4
  store i32 %6, i32* @load_state, align 4
  %7 = load i8*, i8** @FALSE, align 8
  store i8* %7, i8** @editmode, align 8
  store i64 0, i64* @stream_read, align 8
  store i64 0, i64* @protocol_read, align 8
  store i32* null, i32** @nav_url, align 8
  %8 = load i8*, i8** @FALSE, align 8
  store i8* %8, i8** @ipsex, align 8
  %9 = load i8*, i8** @FALSE, align 8
  store i8* %9, i8** @inplace_deactivated, align 8
  %10 = load i8*, i8** @FALSE, align 8
  store i8* %10, i8** @complete, align 8
  %11 = load i8*, i8** @FALSE, align 8
  store i8* %11, i8** @testing_submit, align 8
  store i32* @DocHostUIHandler, i32** @expect_uihandler_iface, align 8
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
